--- a/store/src/app/domains/products/pages/list/list.component.html
+++ b/store/src/app/domains/products/pages/list/list.component.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto">
-    <app-header [cart]="cart()"/>
+    <app-header/>
     <!--<h3>{{cart().length}}</h3>-->
     <div class="grid grid-cols-4 gap-8 mt-5">
         @for (product of products(); track $index;) {
