--- a/store/src/app/domains/shared/components/header/header.component.html
+++ b/store/src/app/domains/shared/components/header/header.component.html
@@ -34,7 +34,7 @@
         <div class="flex items-center">
             <button class="p-2 border rounded relative"
                 (click)="toogleSideMenu()">
-                <div class="absolute -top-2 -left-2 rounded h-5 w-5 bg-black text-white text-xs">{{cart.length}}</div>
+                <div class="absolute -top-2 -left-2 rounded h-5 w-5 bg-black text-white text-xs">{{cart().length}}</div>
                 <svg 
                 class="w-6 h-6" 
                 aria-hidden="true" 
@@ -76,10 +76,18 @@
             </svg>
         </button>
     </div>
-    <div>
-        @for (product of cart; track $index) {
-            <p>{{ product.title }}</p>
-            <p>{{ product.price }}</p>
+    <div class="pt-4 flex flex-col">
+        @for (product of cart(); track $index) {
+            <div class="flex justify-between items-center space-y-2">
+                <div class="flex space-x-2 items-center">
+                    <img class="w-6 h-6" [src]="product.image" [alt]="product.title">
+                    <h3>{{ product.title }}</h3>
+                </div>
+                <p>{{ product.price }}</p>
+            </div>
         }
+        <div>
+            <p>Total: {{ total() }}</p>
+        </div>
     </div>
 </div>
