--- a/store/src/app/domains/info/pages/about/about.component.html
+++ b/store/src/app/domains/info/pages/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="px-10">
     <h1 class="text-lg font-bold">About</h1>
-    <p class="text-xs">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias soluta ut corporis aspernatur doloremque quod odit in similique necessitatibus architecto, iusto mollitia? Neque recusandae ut exercitationem, ex harum doloribus provident!</p>
+    <p class="text-xs">Lorem, ipsum dolor <span highlight>sit amet consectetur adipisicing elit.</span> Alias soluta ut corporis aspernatur doloremque quod odit in similique necessitatibus architecto, iusto mollitia? Neque recusandae ut exercitationem, ex harum doloribus provident!</p>
     <p class="text-xs">
         Numero de clientes 
         @if (duration() > 0) {
