--- a/store/src/app/domains/info/pages/not-found/not-found.component.html
+++ b/store/src/app/domains/info/pages/not-found/not-found.component.html
@@ -4,7 +4,8 @@
             <h1 class="mb-4 text-7xl tracking-tight font-extrabold lg:text-9xl text-blue-600">404</h1>
             <p class="mb-4 text-7xl tracking-tight font-bold text-gray-900 md:text-4xl">Página no disponible</p>
             <p class="mb-4 text-lg font-light text-gray-500">Lo sentimos, no pudimos encontrar la página</p>
-            <a href="#" class="inline-flex bg-blue-600 text-white hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blues-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center my-4">Regresar a la página principal</a>
+            <a routerLink="/" 
+                class="inline-flex bg-blue-600 text-white hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blues-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center my-4">Regresar a la página principal</a>
         </div>
     </div>
 </section>
