--- a/store/src/app/domains/products/components/product/product.component.html
+++ b/store/src/app/domains/products/components/product/product.component.html
@@ -1,9 +1,9 @@
 <div class="group rounded-lg border">
-    <a href="#" class="w-full overflow-hidden rounded-t-lg bg-gray-200">
+    <a [routerLink]="['/detalle', product.id]" class="w-full overflow-hidden rounded-t-lg bg-gray-200">
         <img [src]="product.image" [alt]="product.title" class="h-80 w-full object-cover object-center group-hover:opacity-75">
     </a>
     <div class="flex flex-col space-y-2 p-4">
-        <h3 class="text-sm text-gray-700 min-h-14 text-ellipsis overflow-auto">{{ product.title | uppercase }}</h3>
+        <h4 class="text-sm text-gray-700 text-ellipsis min-h-14 overflow-auto">{{ product.title | uppercase }}</h4>
         <p class="text-lg font-medium text-gray-900">{{ product.price | currency:'Q':'symbol':'1.0' }}</p>
         <p class="text-sm text-gray-900">{{ product.creationAt }}</p>
         <button class="text-black bg-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 w-full" (click)="addToCartHandler()">Add to cart</button>
