--- a/store/src/app/domains/products/pages/list/list.component.html
+++ b/store/src/app/domains/products/pages/list/list.component.html
@@ -1,7 +1,15 @@
-<div class="container mx-auto">
-    <app-header/>
-    <!--<h3>{{cart().length}}</h3>-->
-    <div class="grid grid-cols-4 gap-8 mt-5">
+<!--<div class="container mx-auto">-->
+<!--<app-header/>-->
+<!--<h3>{{cart().length}}</h3>-->
+<div class="flex space-x-4 mt-5">
+    <div class="w-60">
+        <ul>
+            @for (category of categories(); track $index) {
+                <li><a href="#">{{category}}</a></li>
+            }
+        </ul>
+    </div>
+    <div class="grid grid-cols-4 gap-8 w-full">
         @for (product of products(); track $index;) {
             <app-product 
                 [product]="product"
@@ -10,3 +18,5 @@
         }
     </div>
 </div>
+
+<!--</div>-->
