--- a/store/src/app/domains/products/pages/list/list.component.html
+++ b/store/src/app/domains/products/pages/list/list.component.html
@@ -4,8 +4,11 @@
 <div class="flex space-x-4 mt-5">
     <div class="w-60">
         <ul>
+            <li>
+                <a routerLink="/">All</a>
+            </li>
             @for (category of categories(); track $index) {
-                <li><a href="#">{{category}}</a></li>
+                <li><a routerLink="/" [queryParams]="{category: category}">{{category}}</a></li>
             }
         </ul>
     </div>
